WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305577
REGRESSION(
304526@main
): perf test page flickers when loading or relaunching
https://bugs.webkit.org/show_bug.cgi?id=305577
Summary
REGRESSION(304526@main): perf test page flickers when loading or relaunching
Antti Koivisto
Reported
2026-01-15 10:01:46 PST
Bad interaction with table cells and RenderBlockFlow::layoutSimpleBlockContentInInline
Attachments
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2026-01-15 10:02:04 PST
rdar://168187880
Antti Koivisto
Comment 2
2026-01-15 10:07:36 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56645
EWS
Comment 3
2026-01-15 10:45:09 PST
Committed
305655@main
(42319cdd1173): <
https://commits.webkit.org/305655@main
> Reviewed commits have been landed. Closing PR #56645 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug