Cherry-pick 42319cdd1173. rdar://169012940

REGRESSION(304526@main): perf test page flickers when loading or relaunching
    https://bugs.webkit.org/show_bug.cgi?id=305577
    rdar://168187880

    Reviewed by Alan Baradlay.

    We end up with bad table layout because layoutSimpleBlockContentInInline optimization.

    Test: fast/table/table-with-block-in-inline-fast-path.html
    * LayoutTests/fast/table/table-with-block-in-inline-fast-path-expected.html: Added.
    * LayoutTests/fast/table/table-with-block-in-inline-fast-path.html: Added.
    * Source/WebCore/rendering/RenderBlockFlow.cpp:
    (WebCore::RenderBlockFlow::layoutSimpleBlockContentInInline):

    Tables rely on inline layout always recomputing the block height.
    Disable the fast path for them.

    Canonical link: https://commits.webkit.org/305655@main

Identifier: 305413.173@safari-7624-branch